; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ui-file.c_ui_file_new.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ui-file.c_ui_file_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_file = type { i32* }

@ui_file_magic = common dso_local global i32 0, align 4
@null_file_delete = common dso_local global i32 0, align 4
@null_file_flush = common dso_local global i32 0, align 4
@null_file_write = common dso_local global i32 0, align 4
@null_file_fputs = common dso_local global i32 0, align 4
@null_file_read = common dso_local global i32 0, align 4
@null_file_isatty = common dso_local global i32 0, align 4
@null_file_rewind = common dso_local global i32 0, align 4
@null_file_put = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ui_file* @ui_file_new() #0 {
  %1 = alloca %struct.ui_file*, align 8
  %2 = call %struct.ui_file* @xmalloc(i32 8)
  store %struct.ui_file* %2, %struct.ui_file** %1, align 8
  %3 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %4 = getelementptr inbounds %struct.ui_file, %struct.ui_file* %3, i32 0, i32 0
  store i32* @ui_file_magic, i32** %4, align 8
  %5 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %6 = load i32, i32* @null_file_delete, align 4
  %7 = call i32 @set_ui_file_data(%struct.ui_file* %5, i32* null, i32 %6)
  %8 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %9 = load i32, i32* @null_file_flush, align 4
  %10 = call i32 @set_ui_file_flush(%struct.ui_file* %8, i32 %9)
  %11 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %12 = load i32, i32* @null_file_write, align 4
  %13 = call i32 @set_ui_file_write(%struct.ui_file* %11, i32 %12)
  %14 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %15 = load i32, i32* @null_file_fputs, align 4
  %16 = call i32 @set_ui_file_fputs(%struct.ui_file* %14, i32 %15)
  %17 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %18 = load i32, i32* @null_file_read, align 4
  %19 = call i32 @set_ui_file_read(%struct.ui_file* %17, i32 %18)
  %20 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %21 = load i32, i32* @null_file_isatty, align 4
  %22 = call i32 @set_ui_file_isatty(%struct.ui_file* %20, i32 %21)
  %23 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %24 = load i32, i32* @null_file_rewind, align 4
  %25 = call i32 @set_ui_file_rewind(%struct.ui_file* %23, i32 %24)
  %26 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %27 = load i32, i32* @null_file_put, align 4
  %28 = call i32 @set_ui_file_put(%struct.ui_file* %26, i32 %27)
  %29 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  ret %struct.ui_file* %29
}

declare dso_local %struct.ui_file* @xmalloc(i32) #1

declare dso_local i32 @set_ui_file_data(%struct.ui_file*, i32*, i32) #1

declare dso_local i32 @set_ui_file_flush(%struct.ui_file*, i32) #1

declare dso_local i32 @set_ui_file_write(%struct.ui_file*, i32) #1

declare dso_local i32 @set_ui_file_fputs(%struct.ui_file*, i32) #1

declare dso_local i32 @set_ui_file_read(%struct.ui_file*, i32) #1

declare dso_local i32 @set_ui_file_isatty(%struct.ui_file*, i32) #1

declare dso_local i32 @set_ui_file_rewind(%struct.ui_file*, i32) #1

declare dso_local i32 @set_ui_file_put(%struct.ui_file*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
